clean : cleaning code